--- a/Compass_sales/package.json
+++ b/Compass_sales/package.json
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.4.0",
+    "@react-native-firebase/firestore": "^18.4.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
